start point of tutorial

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ img {
     justify-content: space-between;
 }
 
-.comboDigit {
+.DOM_comboDigit {
     height: 2em;
     width: 2em;
     text-align: center;
