--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@ body {
     padding: 0;
     background: #2e2e2e;
     height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
+    overflow: hidden;
 }
 
 img {
@@ -43,12 +45,13 @@ img {
     filter: drop-shadow(0 0 3px white);
 }
 
-#DOM_correctCombo{
+#DOM_correctCombo {
     color: white;
-    position:fixed;
-    bottom:1em;
-    left:50%;
+    position: fixed;
+    bottom: 1em;
+    left: 50%;
     transform: translatex(-50%) rotateZ(180deg);
+    opacity: 0.4;
 }
 
 #logo {
@@ -61,7 +64,42 @@ img {
     transition: 1s;
 }
 
-#logo:hover{
+#logo:hover {
     filter: grayscale(0);
     opacity: 1;
+}
+
+/* Animations */
+
+.wrong {
+    animation: wrong 50ms 3 alternate;
+}
+
+.right {
+    animation: right 1s linear forwards;
+}
+
+@keyframes wrong {
+    0% {
+        transform: translate(-6px);
+    }
+    100% {
+        transform: translate(6px);
+    }
+}
+
+@keyframes right {
+    0% {
+        transform: translateY(0px);
+    }
+    49% {
+        transform: translateY(-10px) translateX(0);
+        opacity: 0;
+    }
+    50%{
+        transform: translateY(-10px) translateX(12%);
+    }
+    100% {
+        transform: translateY(0px) translateX(12%);
+    }
 }
